# kazi-core

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  llms.txt  pyproject.toml  requirements-ci.txt
.github/workflows/: ci.yml
examples/: 01_simple_rag_agent.py  02_multi_tool_agent.py  03_supervisor_delegation.py  04_full_orchestration.py  05_custom_providers.py  06_voice_agent.py  07_subagents_and_supervisor.py  08_serve_api.py  09_background_jobs.py  10_multimodal_and_memory.py  11_openrouter_strongest_setup.py  12_advanced_features.py
kazi/: __init__.py  __main__.py
kazi-go/: .gitignore  Makefile  README.md  go.mod  go.sum  kazi.go
kazi-go/cmd/kazi/: main.go
kazi-go/config/: load.go  schema.go  types.go  validate.go
kazi-go/llm/: factory.go
kazi-go/llm/openai/: client.go  client_test.go
kazi-go/registry/: registry.go  registry_test.go  types.go
kazi-go/secrets/: secret_ref.go
kazi-go/serve/: logging.go  metrics.go  server.go  server_test.go  types.go
kazi-go/tools/builtin/: example.go
kazi-sap/: README.md  pyproject.toml
kazi-sap/examples/: mentor_demo.py  vendor_cleanup.py
kazi-sap/kazi_sap/: __init__.py  auth.py  models.py  prompts.py  scrubber.py
kazi-sap/kazi_sap/tools/: __init__.py  bapi.py  odata.py
kazi-sap/tests/: conftest.py  test_integration.py  test_llm_quality.py  test_odata_tool.py  test_scrubber.py
kazi-sap/tests/fixtures/: dirty_customers.json  dirty_vendors.json
kazi/agents/: __init__.py  a2a_client.py  agent_card.py  delegation.py  discovery.py  monitor.py  subagent.py  supervisor.py
kazi/brain/: __init__.py  graph_builder.py  memory.py  nodes.py  state.py
kazi/cache/: __init__.py  semantic.py
kazi/core/: __init__.py  audit.py  config.py  cost.py  events.py  exceptions.py  guardrails.py  orchestrator.py  registry.py  router.py  schema.py  secrets.py  security.py  token_budget.py
kazi/data/: __init__.py  index_manager.py  ingest.py  parsers.py  query_engine.py
kazi/integration/: __init__.py  fastapi_mount.py  openapi_import.py  scanner.py
kazi/llm/: __init__.py  anthropic.py  base.py  google.py  local.py  openai.py
kazi/memory/: __init__.py  profile.py
kazi/queue/: __init__.py  arq_worker.py  celery_worker.py  webhook.py
kazi/serve/: __init__.py  app.py
kazi/testing/: __init__.py  eval.py  replay.py
kazi/tools/: __init__.py  mcp_client.py  sandbox.py  tool_adapter.py
kazi/tools/builtin/: __init__.py  (+4 more)
kazi/utils/: __init__.py  experiment.py  logging.py  metrics.py  serialization.py  telemetry.py
kazi/voice/: __init__.py  pipeline.py  stt.py  tts.py
tests/: conftest.py  test_monitor.py
tests/e2e/: test_e2e_openai.py
tests/fixtures/: mcp_echo_server.py
tests/integration/: test_a2a_real.py  test_celery_tasks.py  test_concurrent_runs.py  test_custom_providers.py  test_integration_layer.py  test_llm_stack.py  test_mcp_llm_combined.py  test_mcp_real.py  test_orchestrator_advanced.py  test_queue_real.py  test_sandbox_real.py  test_supervisor_subagent.py  test_token_budget.py
tests/unit/: test_agent_card.py  test_api_contracts.py  test_audit_invariants.py  test_audit_shadow.py  test_brain_memory.py  test_brain_nodes.py  test_builtins.py  test_builtins_gaps.py  test_chaos.py  test_circuit_breaker.py  test_concurrency_stress.py  test_config.py  test_config_gaps.py  test_cost.py  test_coverage_gaps.py  test_delegation.py  test_discovery.py  test_graph_builder_utils.py  test_guardrails.py  test_memory_profile.py  test_openapi_http.py  test_property_based.py  test_registry.py  test_registry_gaps.py  test_replay_eval.py  test_router.py  test_schema_export.py  test_security.py  test_serialization.py  test_telemetry.py  test_tenant_invariants.py  test_tool_adapter.py  test_utils.py
