[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Workspace root — not published to PyPI.
# Each publishable package lives under packages/.
#
# Install everything for local dev:
#   pip install -e packages/kazi-core
#   pip install -e packages/kazi-rag
#   pip install -e packages/kazi-mcp
#   pip install -e packages/kazi-a2a
#   pip install -e "packages/kazi-core[openai,anthropic]"
#
# Or use uv workspaces:
#   uv sync

[project]
name = "kazi-workspace"
version = "0.1.0"
description = "kazi monorepo workspace (not published)"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "bandit>=1.7",
    "pip-audit>=2.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "langchain-core>=0.2",
    "hypothesis>=6.100",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=kazi --cov-report=term-missing"
markers = [
    "chaos: fault-injection tests (Redis kill, LLM 429s, MCP disconnect, DLQ delivery)",
    "eval: declarative scenario tests for go/no-go validation of generated integrations",
]
filterwarnings = [
    "ignore:The default value of `allowed_objects` will change in a future version:Warning",
    'ignore:unclosed database in <sqlite3\.Connection:ResourceWarning',
]

[tool.coverage.run]
source = ["kazi"]
omit = [
    "*/site-packages/*",
    "kazi/llm/*",
    "kazi/data/*",
    # Covered by integration tests (real subprocess/stdio — not unit-testable)
    "kazi/tools/mcp_client.py",
    "kazi/tools/sandbox.py",
    # Require real audio APIs (OpenAI Whisper, ElevenLabs) — integration-only
    "kazi/voice/*",
    # CLI entry point — tested via subprocess in integration suite
    "kazi/__main__.py",
    # Require live pandas DataFrames / real filesystem — integration-only
    "kazi/tools/builtin/dataframe.py",
    "kazi/tools/builtin/file_system.py",
    # Require vector DB connections — integration-only
    "kazi/cache/semantic.py",
    # A/B testing helpers — require experiment infrastructure
    "kazi/utils/experiment.py",
    # Prometheus optional dependency — unit tests skipped; covered in integration suite
    "kazi/utils/metrics.py",
    # FastAPI serve layer — requires live HTTP transport; covered by integration suite
    "kazi/serve/app.py",
]

[tool.coverage.report]
fail_under = 57
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.hatch.build.targets.wheel]
include = ["kazi/py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
