[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kazi-sap"
version = "0.1.0"
description = "SAP connector and data scrubber for kazi"
requires-python = ">=3.10"
dependencies = [
    "kazi-base>=0.1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
bapi = ["pyrfc>=2.7"]           # requires SAP NW RFC SDK installed separately
dev  = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "llm: requires a live LLM (slow, costs money) — excluded from default run",
    "integration: requires a SAP sandbox connection",
]

[tool.hatch.build.targets.wheel]
packages = ["kazi_sap"]
